apps/zuul/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zuul-web
  namespace: zuul-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - zuul.teim.app
      secretName: teim-app-wildcard-tls
  rules:
    - host: zuul.teim.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zuul-web
                port:
                  number: 9000
